Implementing the Settings Logic

--- a/styles/meteor-assist.less
+++ b/styles/meteor-assist.less
@@ -63,6 +63,7 @@
 
             li {
               padding-right: 0;
+              padding-left: 3.5em;
               border: none;
             }
 
@@ -100,8 +101,11 @@
       height: 100%;
       display: inline-block;
 
-      .template-editor {
+      .inset-panel {
         height: 100%;
+        .template-editor {
+          height: 100%;
+        }
       }
     }
   }
