--- a/styles/meteor-assist.less
+++ b/styles/meteor-assist.less
@@ -4,107 +4,95 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.meteor-assist-modal-wrapper {
-  .header {
-    margin: 10px 0;
-  }
+* {
+  box-sizing: border-box;
 }
-
-.ma-settings-view {
-  height: 25em;
+.ma-settings-view-wrapper {
+  height: 400px;
   border: 1px solid @tool-panel-border-color;
 
-  .ma-panel-header-menu {
-    width: 100%;
-    height: 3em;
-    padding: 0em 1em;
+  .ma-panel-header {
+    padding: 0 1.5em;
+    height: 40px;
     line-height: 3em;
-    max-height: 60px;
+    border-bottom: 1px solid @tool-panel-border-color;
   }
 
-  .ma-panel-body-wrapper {
+  .ma-panel-body {
     width: 100%;
-    height: 22em;
+    height: calc(100% - 13px);
+    position: relative;
 
     .ma-left-pane {
-      width: 35%;
-      height: 100%;
-      display: inline-block;
-      float: left;
+      position: absolute;
+      left: 0;
+      right: 70%;
+      top: 0;
+      bottom: 0;
       border-right: 1px solid @tool-panel-border-color;
-
-      .select-list {
-        &:before {
-          font-size: 1.1em;
-          width: 1.1em;
-          height: 1.1em;
-          margin-right: 5px;
-        }
-
-        ol.list-group {
-          position: relative;
-          overflow-y: auto;
-          max-height: 18em;
-          border: 1px solid @tool-panel-border-color;
-          margin: 0 0 0 0;
-
-          ol.list-group {
-            border: none;
-          }
-
-          li {
-            display: block;
-            padding: 0.5em 1em;
-            border-bottom: 1px solid @tool-panel-border-color;
-            line-height: 2em;
-            background-color: @button-background-color;
-
-            li {
-              padding-right: 0;
-              padding-left: 3.5em;
-              border: none;
-            }
-
-            .actions-button {
-              span.icon {
-                margin: 0 0.25em;
-                cursor: pointer;
-                // border: 1px solid;
-                // text-align: center;
-                // width: 1.5em;
-                // line-height: 1.5em;
-                // height: 1.5em;
-                // transition: color 0.1s linear;
-                //
-                // &:hover {
-                //   color: white;
-                // }
-
-                &::before {
-                  margin: 0;
-                }
-              }
-            }
-
-            .title-edittext {
-              width: 75%;
-            }
-          }
-        }
-      }
     }
 
     .ma-right-pane {
-      width: 65%;
-      height: 100%;
-      display: inline-block;
+      position: absolute;
+      left: 30%;
+      right: 0;
+      top: 0;
+      bottom: 0;
+    }
+  }
+}
 
-      .inset-panel {
-        height: 100%;
-        .template-editor {
-          height: 100%;
+.ma-tree-view-wrapper {
+  height: 100%;
+
+  .ma-tree-view-header {
+    height: 40px;
+    line-height: 35px;
+    padding: 0 1em;
+    border-bottom: 1px solid @tool-panel-border-color;
+    margin: 0px;
+  }
+
+  .select-list {
+    height: calc(100% - 16px);
+    >.list-group {
+      // border: 1px solid @tool-panel-border-color;
+      width: 100%;
+      overflow-y: auto;
+      margin: 0;
+      position: relative;
+      margin: 0;
+      height: 100%;
+
+      li {
+        padding: 0.5em 1em;
+        display: block;
+        background-color: @button-background-color;
+        border-bottom: 1px solid @tool-panel-border-color;
+
+        &:hover { background-color: @button-background-color-hover; }
+        &.selected { background-color: darken(@button-background-color-hover, 10%); }
+
+        ol.list-group {
+          max-height: 100%;
+
+          li {
+            padding-right: 0;
+          }
+          &:empty {
+            display: none;
+          }
         }
       }
     }
+  }
+}
+
+.editable-label {
+  width: 50%;
+  .title-label,
+  .title-editbox {
+    display: inline-block;
+    width: 100%;
   }
 }
