--- a/styles/meteor-assist.less
+++ b/styles/meteor-assist.less
@@ -4,109 +4,6 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.meteor-assist-modal-wrapper {
-  .header {
-    margin: 10px 0;
-  }
-}
-
-.ma-settings-view {
-  height: 25em;
-  border: 1px solid @tool-panel-border-color;
-
-  .ma-panel-header-menu {
-    width: 100%;
-    height: 3em;
-    padding: 0em 1em;
-    line-height: 3em;
-    max-height: 60px;
-  }
-
-  .ma-panel-body-wrapper {
-    width: 100%;
-    height: 22em;
-
-    .ma-left-pane {
-      width: 35%;
-      height: 100%;
-      display: inline-block;
-      float: left;
-      border-right: 1px solid @tool-panel-border-color;
-
-      .select-list {
-        // overflow-y: auto;
-        max-height: 22em;
-
-        &:before {
-          font-size: 1.1em;
-          width: 1.1em;
-          height: 1.1em;
-          margin-right: 5px;
-        }
-
-        ol.list-group {
-          position: relative;
-          overflow-y: auto;
-          border: 1px solid @tool-panel-border-color;
-          margin: 0 0 0 0;
-
-          ol.list-group {
-            border: none;
-          }
-
-          li {
-            display: block;
-            padding: 0.5em 1em;
-            border-bottom: 1px solid @tool-panel-border-color;
-            line-height: 2em;
-            background-color: @button-background-color;
-
-            li {
-              padding-right: 0;
-              padding-left: 3.5em;
-              border: none;
-            }
-
-            .actions-button {
-              span.icon {
-                margin: 0 0.25em;
-                cursor: pointer;
-                // border: 1px solid;
-                // text-align: center;
-                // width: 1.5em;
-                // line-height: 1.5em;
-                // height: 1.5em;
-                // transition: color 0.1s linear;
-                //
-                // &:hover {
-                //   color: white;
-                // }
-
-                &::before {
-                  margin: 0;
-                }
-              }
-            }
-
-            .title-edittext {
-              width: 75%;
-            }
-          }
-        }
-      }
-    }
-
-    .ma-right-pane {
-      width: 65%;
-      height: 100%;
-      display: inline-block;
-
-      .inset-panel {
-        height: 100%;
-        .template-editor {
-          height: 100%;
-        }
-      }
-    }
-  }
+.template-editor-panel {
+  height: 30em;
 }
